feat: itinerary score & popularity logic