@@ -4,9 +4,7 @@ import com.example.domo.model.Place;
 import com.example.domo.repository.PlaceRepository;
 import org.springframework.stereotype.Service;
 
-import java.util.List;
-import java.util.UUID;
-import java.util.stream.Collectors;
+import java.util.*;
 
 @Service
 public class SupabaseServiceImpl implements SupabaseService {
@@ -19,14 +17,21 @@ public class SupabaseServiceImpl implements SupabaseService {
 
     @Override
     public List<Place> fetchPlaces(String sido, String sigungu, int limit, int offset) {
-        return placeRepository.findByRegion(sido, sigungu, limit, offset);
+        // repository.search를 지역 필터와 함께 쓰고 싶으면 search 내부 SQL에 sido/sigungu 조건 추가하세요.
+        return placeRepository.searchByRegion(sido, sigungu, limit, offset);
     }
 
     @Override
-    public List<Place> fetchPlacesByIds(List<String> placeIds) {
-        List<UUID> ids = placeIds.stream()
-                .map(UUID::fromString)
-                .collect(Collectors.toList());
-        return placeRepository.findByIds(ids);
+    public List<Place> fetchPlacesInOrder(List<UUID> placeIds) {
+        if (placeIds == null || placeIds.isEmpty()) return Collections.emptyList();
+
+        Map<UUID, Integer> order = new HashMap<>();
+        for (int i = 0; i < placeIds.size(); i++) order.put(placeIds.get(i), i);
+
+        List<Place> fetched = placeRepository.findByIds(placeIds);
+
+        return fetched.stream()
+                .sorted(Comparator.comparingInt(p -> order.getOrDefault(p.getId(), Integer.MAX_VALUE)))
+                .toList();
     }
 }
